--- a/package.json
+++ b/package.json
@@ -35,6 +35,13 @@
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "react-hot-loader": "^1.3.0",
+    "autoprefixer-loader": "^3.1.0",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
+    "image-webpack-loader": "^1.6.1",
+    "imagemin": "^3.2.0",
+    "style-loader": "^0.12.4",
+    "jquery": "^2.1.4",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
